# mtlpy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml  tag-release.yml
benchmarks/: bench.py
csrc/: bindings.cpp  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  device.cpp  device.h  metal_error.h  metal_impl.mm  pipeline.cpp  pipeline.h  pipeline_cache.cpp  pipeline_cache.h  sampler.cpp  sampler.h  texture.cpp  texture.h
examples/: adder.py  async_dispatch.py  reuse_buffers.py  texture_compute.py
src/mtlpy/: __init__.py  buffer.py  device.py  operators.py  pipeline.py  shader.py  texture.py  utils.py
tests/: conftest.py  test_async.py  test_basic.py  test_buffer_reuse.py  test_command_buffer.py  test_operators.py  test_pipeline_persistence.py  test_shapes.py  test_stability.py  test_texture.py
