[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "mtlpy"
version = "0.1.0"
description = "Python bindings for Apple Metal GPU compute"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["metal", "gpu", "compute", "apple", "macos", "mtl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.20"]

[tool.scikit-build]
wheel.packages = ["src/mtlpy"]
cmake.build-type = "Release"
