[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "mtlpy"
version = "0.1.0"
description = "Python bindings for Apple Metal GPU compute"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "Peyton Howe" }]
keywords = ["metal", "gpu", "compute", "apple", "macos", "mtl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/peyton-howe/mtlpy"
Repository = "https://github.com/peyton-howe/mtlpy"
Issues = "https://github.com/peyton-howe/mtlpy/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.scikit-build]
wheel.packages = ["src/mtlpy"]
cmake.build-type = "Release"
